<resources>
    <string name="app_name">Touch Star</string>
    <string name="new_game">NEW GAME</string>
    <string name="options">OPTIONS</string>
    <string name="top_score">TOP 7</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="exit">EXIT</string>
    <string name="game_over">GAME OVER</string>
    <string name="level_finished">LEVEL FINISHED</string>
    <string name="lives">Your Lives</string>
    <string name="back">Back</string>
    <string name="instruction_info">The goal of the game is to get the score as high as possible.
    Stages are getting harder and brings more points.\nYour task is to touch stars which will fall down on the screen.\n</string>
    <string name="select_image">Select Falling Object</string>
    <string name="leave_info">You will lose all of your progress. Do you really want to leave the game?</string>
    <string name="stay_msg">STAY</string>
    <string name="leave_msg">LEAVE</string>
    <string name="leave_title">Are you sure you want to exit?</string>
    <string name="top_seven">Score Table</string>
    <string name="switcher">switcher</string>

    <string name="score_lp_label">LP</string>
    <string name="score_name_label">NAME</string>
    <string name="score_stage_label">STAGE</string>
    <string name="score_score_label">SCORE</string>
    <string name="save_score">SAVE</string>
    <string name="enter_your_name">Your name (max 8 characters): </string>
    <string name="your_name">Your name </string>
    <string name="username_rule">Your name must be in range from 0 to 8 characters length</string>

    <string name="score">Score: </string>
    <string name="stage">Stage: </string>
    <string name="options_button_select">Select</string>

    <string name="options_heart">Heart</string>
    <string name="options_star">Star</string>
    <string name="options_flower">Flower</string>

    <string name="data_loading">Loading score list&#8230;</string>
    <string name="data_loading_done">Done!</string>

    <string-array name="start_game_count_down">
        <item name="count_3">3</item>
        <item name="count_2">2</item>
        <item name="count_1">1</item>
        <item name="count_start">START</item>
    </string-array>
</resources>
