<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/halfDark"
    android:columnCount="4"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/score_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:gravity="center"
        android:layout_columnWeight="0.1"
        android:text="@string/score_lp_label" />

    <TextView
        android:id="@+id/score_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:gravity="center"
        android:layout_columnWeight="0.4"
        android:text="@string/score_name_label" />

    <TextView
        android:id="@+id/score_stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:gravity="center"
        android:layout_columnWeight="0.1"
        android:text="@string/score_stage_label" />

    <TextView
        android:id="@+id/score_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:gravity="center"
        android:layout_columnWeight="0.4"
        android:text="@string/score_score_label" />
</GridLayout>