<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/halfDark"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/score_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_lp_label"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/score_name"/>

    <TextView
        android:id="@+id/score_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_name_label"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/score_id"
        app:layout_constraintEnd_toStartOf="@id/score_stage"
        />

    <TextView
        android:id="@+id/score_stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_stage_label"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@+id/score_name"
        app:layout_constraintEnd_toStartOf="@id/score_score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/score_score_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/score_stage"
        />
</androidx.constraintlayout.widget.ConstraintLayout>