<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kosmos">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_text_padding"
        android:textSize="@dimen/dialog_text_size"
        android:text="@string/leave_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stay"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="@dimen/dialog_button_height"
        android:text="@string/stay_msg"
        app:layout_constraintEnd_toEndOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <Button
        android:id="@+id/button_back"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="@dimen/dialog_button_height"
        android:text="@string/leave_msg"
        app:layout_constraintStart_toStartOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/info" />
</androidx.constraintlayout.widget.ConstraintLayout>