<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainMenuActivity"
    android:background="@drawable/kosmos">

    <ImageView
        android:id="@+id/bigStar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textStyle="bold"
        android:textSize="@dimen/app_page_title"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bigStar" />

    <TextView
        android:id="@+id/instruction_info"
        style="@style/ButtonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_text_margin"
        android:layout_marginEnd="@dimen/basic_text_margin"
        android:padding="@dimen/basic_text_padding"
        android:textSize="@dimen/basic_text_size"
        android:text="@string/instruction_info"
        android:onClick="menuOptionsListener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameText"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="@dimen/dialog_button_height"
        android:background="@drawable/menu_button"
        android:text="@string/back"
        android:textColor="@color/yellowColor"
        android:layout_marginTop="@dimen/default_margin"
        android:onClick="menuOptionsListener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_info" />
</androidx.constraintlayout.widget.ConstraintLayout>