<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkTransparent">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_text_padding"
        android:textSize="@dimen/dialog_text_size"
        android:text="@string/enter_your_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_edtTxt"
        android:layout_width="@dimen/dialog_edit_text_width"
        android:layout_height="@dimen/dialog_edit_text_height"
        android:textColor="@android:color/white"
        android:cursorVisible="true"
        android:hint="@string/your_name"
        android:autofillHints="@string/your_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <Button
        android:id="@+id/button_save"
        android:background="@drawable/menu_button"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="@dimen/dialog_button_height"
        android:text="@string/save_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edtTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>