<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/nie"
    >

    <ImageView
        android:id="@+id/bigStar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/starLeft"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_star_black_24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/bigStar"
        app:layout_constraintEnd_toStartOf="@id/bigStar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/starRight"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_star_black_24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/bigStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bigStar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bigStar" />

    <TextView
        android:id="@+id/instruction_info"
        style="@style/ButtonMenu"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="150dp"
        android:padding="20dp"
        android:text="@string/new_game"
        android:layout_marginTop="30dp"
        android:onClick="menuOptionsListener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameText"/>

    <Button
        android:id="@+id/ok"
        style="@style/ButtonMenu"
        android:text="@string/back"
        android:onClick="menuOptionsListener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_info" />

</androidx.constraintlayout.widget.ConstraintLayout>