<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dynamicLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <View
        android:id="@+id/game_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/livesLeft"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginStart="@dimen/top_bar_margin_start"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/top_bar_data_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/lifeIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lifeIcon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginStart="@dimen/top_bar_margin_start"
        android:contentDescription="@string/lives"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/ic_favorite_black_24dp"
        app:layout_constraintStart_toStartOf="@+id/game_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginEnd="@dimen/top_bar_margin_start"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/top_bar_data_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/game_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/top_bar_height"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@android:color/white"
        android:textSize="@dimen/top_bar_data_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/top_bar_height"
        android:gravity="center"
        android:text="@string/stage"
        android:textColor="@android:color/white"
        android:textSize="@dimen/top_bar_data_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/scoreLabel"
        app:layout_constraintStart_toEndOf="@+id/livesLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_score"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/top_bar_height"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/top_bar_data_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/stage_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextSwitcher
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/switcher_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/switcher_text_padding"
            android:textSize="@dimen/switcher_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/switcher_text_padding"
            android:textSize="@dimen/switcher_text_size"
            android:textStyle="bold" />
    </TextSwitcher>

    <ImageButton
        android:id="@+id/go_next"
        android:layout_width="@dimen/next_level_sign"
        android:layout_height="@dimen/next_level_sign"
        android:background="@android:color/transparent"
        android:contentDescription="@string/switcher"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switcher" />

    <View
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>